# lufal-auxiliar

./: .env.example  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
%USERPROFILE%/.tauri/: lufal-ordenes.key  lufal-ordenes.key.pub
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: deploy.py  release.ps1
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/: vfpsync.proto
src-tauri/src/: config.rs  db.rs  dbf_reader.rs  error.rs  grpc.rs  lib.rs  main.rs  print.rs  types.rs  xlsx.rs
src-tauri/src/models/: almacen.rs  arts.rs  caja.rs  cliente.rs  conccaja.rs  conccxc.rs  concinv.rs  corte.rs  cxc.rs  docum.rs  minv.rs  mod.rs  movim.rs  multialm.rs  proveedor.rs  unidades.rs
src/components/: ErrorBanner.svelte  LoginGate.svelte  Nav.svelte  SkeletonList.svelte  UpdateBanner.svelte
src/lib/: auth.svelte.ts  config.svelte.ts  dbf.ts  grpc.ts  nav.svelte.ts  types.ts  updater.ts  utils.ts
src/views/: ConfigView.svelte  DetalleView.svelte  EstadisticasView.svelte  EtiquetasView.svelte  FraccionesView.svelte  OrdenesView.svelte  SetupView.svelte
