[package]
name = "lufal-auxiliar-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "lufal_auxiliar_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-dialog  = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio       = { version = "1", features = ["full"] }
tonic       = { version = "0.12", features = ["tls", "tls-native-roots"] }
prost       = "0.13"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
dirs        = "5"
toml        = "0.8"
anyhow      = "1"
rusqlite    = { version = "0.31", features = ["bundled"] }
chrono      = { version = "0.4", default-features = false, features = ["std", "serde"] }
calamine        = { version = "0.26", features = ["dates"] }
rust_xlsxwriter = "0.76"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tauri-build         = { version = "2", features = [] }
tonic-build         = "0.12"
protoc-bin-vendored = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
